@@ -1,3 +1,7 @@
+2004-11-03  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/stl_numeric.h: Trivial formatting fixes.
+
 2004-11-03  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/c++config: Spacing.
